[package]
name = "depkg"
version = "1.1.1"
edition = "2024"
description = "A tool to decompile wallpaper engine pkg and tex files"
license = "GPL-3.0"

[dependencies]
bcndecode = "0.2.0"
clap = { version = "4.5.54", features = ["derive"] }
image = "0.25.9"
lz4 = "1.28.1"

[profile.release]
lto = "thin"
jemalloc = true
codegen-unit = 1
